# generate-sqlc-go-helper

./: .gitignore  config.lua  go.work  go.work.sum  main.py  pyproject.toml
go/: .env  .gitignore  Makefile  _templateenv  go.mod  go.sum
go/cmd/: README.md  create-basic.go  create-interface-methods.go  create-method.go  env.go  helpers.go  interfaces.go  main.go  parse.go
go/cmd/conversions/: from-func-decl.go  from-funcdecl.go  from-function.go  from-gen-decl.go  from-gendecl.go  from-struct.go
go/cmd/create/: create-basic.go  create-display-methods.go  create-interface-methods.go  create-method.go
go/cmd/create-DISCONTINUED-see-data/: create-display-methods.go
go/output/: generated-database-query-param-adapters.go  generated-queries.go
gov2/: _templateenv  go.mod  go.sum
gov2/cmd/: main.go  write.go
gov2/db/: customers.sql.go  test.sql.go
gov2/example-db/: models.go  post-customers.sql.go
gov2/generators/: db-interface-adapters.go  db-interfaces.go  db-query-params.go  function.go
gov2/inspectors/: funcs.go  structs.go
gov2/tools/: tools.go
output/queries/: generated-queries.go
python/: Makefile  main.py
python/sqlc/: post-transaction-data.sql
python/sqlcgohelper/: create.py  data.py  old_parse.py  parse.py  templates.py
sqlc/: post-account-data.sql
sqlc-handlers/: pyproject.toml  pyrightconfig.json
sqlc-handlers/sqlc/: get-account-data.sql  get-transaction-data.sql
sqlc-handlers/sqlcgohelper/: _models.py  create.py  parse.py
sqlcgohelper/: _models.py  conversions.py  create.py  data.py  parse.py  templates.py
sqlcgohelper/jinja2/: params.jinja  query-file.jinja
(+42 files in other folders)
