[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["sqlcgohelper"]

[project]
name = "sqlcgohelper"
version = "2025.0.1"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "altjoe", email = "joe@alterejoe.com"},
]
maintainers = [
  {name = "altjoe", email = "joe@alterejoe.com"},
]
# description = "Lovely Spam! Wonderful Spam!"
# readme = "README.rst"
# license = "MIT"
# license-files = ["LICEN[CS]E.*"]
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
# classifiers = [
#   "Development Status :: 4 - Beta",
#   "Programming Language :: Python"
# ]
# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]
# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# "Bug Tracker" = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
#
# [project.scripts]
# spam-cli = "spam:main_cli"
#
# [project.gui-scripts]
# spam-gui = "spam:main_gui"
#
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
